make everything work, add evaporator

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,12 @@
 item.thaumic-industries-vinteum.name = Vinteum
+item.thaumic-industries-vinteum.description = The most basic magical material.
 item.thaumic-industries-managlass.name = Managlass
+item.thaumic-industries-managlass.description = Magical glass. Used for many simple machines.
 block.thaumic-industries-vinteum-ore.name = Vinteum Ore
+block.thaumic-industries-vinteum-ore.description = Upon further inspection, what seemed to be just a char tile is actually a new ore. Regular drills do not work, perhaps a different approach is needed?
 block.thaumic-industries-vinteum-extractor.name = Vinteum extractor
+block.thaumic-industries-vinteum-extractor.description = Uses water to extract Vinteum solution from ore tiles.
+block.thaumic-industries-evaporator.name = Evaporator
+block.thaumic-industries-evaporator.description = Slowly dries Vinteum solution, forming Vinteum.
+liquid.thaumic-industries-vinteum-solution.name = Vinteum Solution
+liquid.thaumic-industries-vinteum-solution.description = A small amount of Vinteum dissolved in water. Can be dried into Vinteum.
