Add the infuser, and a lot of other things

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,7 @@
 item.thaumic-industries-vinteum.name = Vinteum
 item.thaumic-industries-vinteum.description = The most basic magical material.
+item.thaumic-industries-purified-vinteum.name = Purified Vinteum
+item.thaumic-industries-purified-vinteum.description = A purer form of vinteum, can be used to channel stronger magic.
 item.thaumic-industries-managlass.name = Managlass
 item.thaumic-industries-managlass.description = Magical glass. Used for many simple machines.
 block.thaumic-industries-vinteum-ore.name = Vinteum Ore
@@ -8,5 +10,9 @@ block.thaumic-industries-vinteum-extractor.name = Vinteum extractor
 block.thaumic-industries-vinteum-extractor.description = Uses water to extract Vinteum solution from ore tiles.
 block.thaumic-industries-evaporator.name = Evaporator
 block.thaumic-industries-evaporator.description = Slowly dries Vinteum solution, forming Vinteum.
+block.thaumic-industries-infuser-t1.name = Glass Infuser
+block.thaumic-industries-infuser-t1.description = Uses magic and Vinteum to convert Metaglass into Managlass. Can be operated slowly with a Beta or Gamma, and faster with a magical unit.
+block.thaumic-industries-purifier.name = Purifier
+block.thaumic-industries-purifier.description = Purifies Vinteum using power and magic. Can only be operated by tier 1 or higher magical units.
 liquid.thaumic-industries-vinteum-solution.name = Vinteum Solution
 liquid.thaumic-industries-vinteum-solution.description = A small amount of Vinteum dissolved in water. Can be dried into Vinteum.
